--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-database:18.0.1'
+    implementation 'com.google.firebase:firebase-auth:18.0.1'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
